--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,10 +3,13 @@
 
 $font-family-sans-serif: "Poppins", sans-serif;
 
+$carousel-control-color: invert(100%);
+
 /* Importing Bootstrap from node_modules*/
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-/*All custom css*/
+/* All custom css */
+/* Navitation css */
 body {
   background-color: #f6f6f6;
 }
@@ -55,3 +58,64 @@ body {
   background: #fff none repeat scroll 0 0;
   box-shadow: 0 1px 7px -2px rgb(0 0 0 / 30%);
 }
+/* Navitation css ends*/
+
+/*Main Carousel css starts*/
+.carousel-control-prev {
+  left: -120px;
+}
+
+.carousel-control-next {
+  right: -120px;
+}
+
+#WooMain__carousel {
+  height: 60vh;
+  //   background: palegreen;
+}
+
+.WooMain__carousel__content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: inherit;
+  min-height: 100%;
+  //   background: palevioletred;
+  &__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    &__subtitle {
+      font-size: 24px;
+      font-weight: 500;
+      margin: 0;
+      letter-spacing: 1px;
+    }
+
+    &__header {
+      font-size: 52px;
+      line-height: 65px;
+      margin: 5px 0 27px;
+    }
+
+    &__button {
+      font-size: 16px;
+      line-height: 1;
+      display: inline-block;
+      padding: 19px 50px;
+      text-transform: uppercase;
+      color: #010101;
+      border: 1px solid #333;
+      background: transparent;
+
+      &:hover {
+        background-color: #a749ff;
+        color: white;
+        border: 1px solid #a749ff;
+      }
+    }
+  }
+}
+
+/*Main Carousel css ends*/
