--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 @charset "UTF-8";
 /*Customization of Bootstrap*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap");
+body {
+  overflow-x: hidden;
+}
+
 /* Importing Bootstrap from node_modules*/
 /*!
  * Bootstrap v5.0.2 (https://getbootstrap.com/)
@@ -10807,10 +10812,6 @@ body {
   right: -120px;
 }
 
-#WooMain__carousel {
-  height: 60vh;
-}
-
 .WooMain__carousel__content {
   display: flex;
   flex-direction: row;
@@ -10851,5 +10852,53 @@ body {
 }
 
 /*Main Carousel css ends*/
+/*Featured-banner-card css starts*/
+.WooFeatCard__pad {
+  padding: 15px;
+}
+
+.WooFeatCard__single {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  border: 3px solid #ffffff;
+  position: relative;
+  overflow: hidden;
+}
+.WooFeatCard__single:hover img {
+  transform: scale(1.5);
+}
+.WooFeatCard__single__content {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+.WooFeatCard__single__content__title {
+  color: #617d05;
+  font-family: Cormorant Garamond;
+  font-size: 36px;
+  font-weight: 600;
+  margin: 0;
+}
+.WooFeatCard__single__content__price {
+  font-family: Cormorant Garamond;
+  font-size: 18px;
+  font-weight: 600;
+  margin: 3px 0 58px;
+  color: #010101;
+}
+.WooFeatCard__single__content__price span {
+  color: #617d05;
+}
+.WooFeatCard__single__content__icon {
+  color: #617d05;
+  border: 2px solid #617d05;
+  display: inline-block;
+  width: 28px;
+  height: 28px;
+  border-radius: 100%;
+  text-align: center;
+}
+
+/*Featured-banner-card css ends*/
 
 /*# sourceMappingURL=style.css.map */
