--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,12 @@
 /*Customization of Bootstrap*/
+// for removing horizontal scroll bar
+body {
+  overflow-x: hidden;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap");
 
 $font-family-sans-serif: "Poppins", sans-serif;
 
@@ -70,8 +77,8 @@ body {
 }
 
 #WooMain__carousel {
-  height: 60vh;
-  //   background: palegreen;
+  // height: 70vh;
+  // background: palegreen;
 }
 
 .WooMain__carousel__content {
@@ -117,5 +124,60 @@ body {
     }
   }
 }
-
 /*Main Carousel css ends*/
+
+/*Featured-banner-card css starts*/
+.WooFeatCard__pad {
+  padding: 15px;
+}
+
+.WooFeatCard__single {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  // margin-left: 50px;
+  border: 3px solid #ffffff;
+  position: relative;
+  overflow: hidden;
+
+  &:hover img {
+    transform: scale(1.5);
+  }
+
+  &__content {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+
+    &__title {
+      color: #617d05;
+      font-family: Cormorant Garamond;
+      font-size: 36px;
+      font-weight: 600;
+      margin: 0;
+    }
+
+    &__price {
+      font-family: Cormorant Garamond;
+      font-size: 18px;
+      font-weight: 600;
+      margin: 3px 0 58px;
+      color: #010101;
+
+      span {
+        color: #617d05;
+      }
+    }
+
+    &__icon {
+      color: #617d05;
+      border: 2px solid #617d05;
+      display: inline-block;
+      width: 28px;
+      height: 28px;
+      border-radius: 100%;
+      text-align: center;
+    }
+  }
+}
+
+/*Featured-banner-card css ends*/
