--- a/scss/main.scss
+++ b/scss/main.scss
@@ -134,13 +134,22 @@ body {
 .WooFeatCard__single {
   margin-top: 20px;
   margin-bottom: 50px;
-  // margin-left: 50px;
   border: 3px solid #ffffff;
   position: relative;
   overflow: hidden;
 
+  &:hover &__content__icon {
+    color: #617d0590;
+    border: 2px solid #617d0550;
+    /*icon hover*/
+  }
+
+  img {
+    transition: all 0.5s ease;
+  }
+
   &:hover img {
-    transform: scale(1.5);
+    transform: scale(1.2);
   }
 
   &__content {
@@ -179,5 +188,225 @@ body {
     }
   }
 }
-
 /*Featured-banner-card css ends*/
+
+/* Daily Deals css starts */
+.WooDailyDeals__heading__title {
+  font-size: 30px;
+  font-weight: 600;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  position: relative;
+
+  &::before,
+  &::after {
+    position: absolute;
+    top: 17px;
+    width: 80px;
+    height: 2px;
+    content: "";
+    background-color: #000;
+  }
+
+  &::before {
+    left: -100px;
+  }
+
+  &::after {
+    right: -100px;
+  }
+}
+
+.WooDailyDeals__tablist {
+  &__tab a {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0;
+    transition: all 0.3s ease 0s;
+    color: #555;
+  }
+}
+
+/************ PRODUCTS ***********/
+.WooDailyDeals__product__single {
+  margin: 30px 0;
+  overflow: hidden;
+  position: relative;
+
+  &__img {
+    img {
+      width: 100%;
+      overflow: hidden;
+
+      &:nth-child(1) {
+        // opacity: 1;
+      }
+
+      &:nth-child(2) {
+        position: absolute;
+        right: -100px;
+        opacity: 0;
+        z-index: 7;
+        transition: all 0.7s ease;
+      }
+    }
+  } //img
+
+  &:hover img:nth-child(2) {
+    opacity: 1;
+    right: 0;
+  }
+
+  &__badges {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    z-index: 9;
+
+    & span {
+      display: block;
+      margin-bottom: 10px;
+      padding: 3px 11px;
+      font-size: 13px;
+      font-weight: 500;
+      line-height: 1;
+      color: #fff;
+      border-radius: 3px;
+
+      &:nth-child(1) {
+        background: #fa6bff;
+      }
+
+      &:nth-child(2) {
+        background: #a749ff;
+      }
+    }
+  } //badges
+
+  &__action {
+    width: 100%;
+    position: absolute;
+    bottom: 96px;
+    display: flex;
+    overflow: hidden;
+    z-index: 9;
+
+    button {
+      font-size: 16px;
+      line-height: 48px;
+      text-align: center;
+      text-transform: capitalize;
+      color: #fff;
+      background: #a749ff;
+
+      &:hover {
+        background: #000;
+      }
+    }
+
+    &__wishlist {
+      width: 48px;
+      height: 48px;
+      border: none;
+
+      //for hover
+      transform: translateY(30px);
+      transition: all 0.7s ease;
+      opacity: 0;
+    }
+
+    &__cart {
+      width: calc(100% - 2 * 48px);
+      height: 48px;
+      border-right: 1px solid #fff;
+      border-left: 1px solid #fff;
+      border-top: none;
+      border-bottom: none;
+
+      //for hover
+      transform: translateY(20px);
+      transition: all 0.7s ease;
+      opacity: 0;
+    }
+
+    &__quickview {
+      width: 48px;
+      height: 48px;
+      border: none;
+
+      //for hover
+      transform: translateY(10px);
+      transition: all 0.7s ease;
+      opacity: 0;
+    }
+  } //action
+
+  &:hover &__action__cart,
+  &:hover &__action__quickview,
+  &:hover &__action__wishlist {
+    transform: translateY(0);
+    transition: all 0.7s ease;
+    opacity: 1;
+  }
+
+  &__info {
+    margin-top: 20px;
+
+    &__title {
+      font-size: 16px;
+      margin: 0;
+
+      a {
+        text-decoration: none;
+        color: #000;
+
+        &:hover {
+          color: #a749ff;
+        }
+      }
+    } //title
+
+    &__rating {
+      margin: 3px 0;
+
+      & .yellow {
+        color: #ffa900;
+      }
+
+      & .gray {
+        color: #5f5d5d;
+      }
+    } //rating
+
+    &__price {
+      font-size: 15px;
+      font-weight: 500;
+
+      &__sale {
+        position: relative;
+        color: #000;
+        margin: 0 9px;
+
+        &::after {
+          position: absolute;
+          top: 10px;
+          right: -13px;
+          width: 7px;
+          height: 2px;
+          content: "";
+          background-color: #000;
+        }
+      }
+
+      &__regular {
+        text-decoration: line-through;
+        color: #8e8e8e;
+        margin: 0 9px;
+      }
+    } //price-
+  } //info
+}
+/************ PRODUCTS ***********/
+
+/* Daily Deals css ends */
