--- a/css/style.css
+++ b/css/style.css
@@ -11083,5 +11083,45 @@ body {
 
 /************ PRODUCTS ***********/
 /* Daily Deals css ends */
+/*Support section css starts*/
+.WooSupport {
+  margin: 100px 0;
+}
+.WooSupport__single {
+  padding: 36px 5px 30px;
+  border: 4px solid #fff;
+}
+.WooSupport__single:hover .WooSupport__single__icon {
+  animation-duration: 0.4s;
+  animation-name: support__animation;
+}
+.WooSupport__single__title {
+  font-size: 18px;
+  line-height: 24px;
+  margin: 15px 0;
+  color: #494949;
+}
+.WooSupport__single__description {
+  font-size: 14px;
+  width: 80%;
+  margin: 0 auto;
+  color: #6a6a6a;
+}
+
+@keyframes support__animation {
+  0% {
+    transform: scale(1.2);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    transform: scale(1.2) rotate(3deg);
+  }
+  20%, 40%, 60%, 80% {
+    transform: scale(1.2) rotate(-3deg);
+  }
+  100% {
+    transform: scale(1) rotate(0);
+  }
+}
+/*Support section css ends*/
 
 /*# sourceMappingURL=style.css.map */
