--- a/scss/main.scss
+++ b/scss/main.scss
@@ -567,3 +567,20 @@ footer {
   letter-spacing: 0.9px;
 }
 /*footer ends*/
+
+/*Archive shop navigation starts*/
+.WooTopNav__notice {
+  margin: 0;
+  letter-spacing: 0.8px;
+  color: #555252;
+
+  p {
+    font-family: Poppins, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    margin: 0;
+    padding: 0;
+  }
+}
+/*Archive shop navigation ends*/
