Finished the Archive shop page

--- a/css/style.css
+++ b/css/style.css
@@ -10807,6 +10807,10 @@ textarea.form-control-lg {
   color: #a749ff;
 }
 
+.Woo-primary-bg {
+  background: #a749ff;
+}
+
 .position__ralative {
   position: relative;
 }
@@ -11325,15 +11329,16 @@ footer {
 }
 .WooShopSidebar__widgets__content form button {
   font-size: 20px;
-  position: relative;
+  position: absolute;
   top: 50%;
-  left: 0%;
+  right: 0%;
   padding: 0 15px;
   cursor: pointer;
-  transform: translateY(0%);
+  transform: translateY(-50%);
   color: #000;
   border: #a1a5aa;
   border-left: 1px solid #a1a5aa;
+  background: transparent;
 }
 .WooShopSidebar__widgets__content__categories button {
   background: none;
@@ -11370,7 +11375,86 @@ footer {
   background-color: #a749ff;
   border: 2px solid #a749ff;
 }
+.WooShopSidebar__widgets__content__categories ul {
+  padding-left: 0;
+  width: 80%;
+}
+.WooShopSidebar__widgets__content__categories ul .btn__tag {
+  font-size: 14px;
+  background-color: #f1f1f1;
+  border-radius: 50px;
+  margin-bottom: 15px;
+  margin-right: 10px;
+}
+.WooShopSidebar__widgets__content__categories ul .btn__tag:hover {
+  color: white;
+  background-color: #a749ff;
+}
 
 /* shop sidebar css ends */
+/*Shope page conent starts*/
+/**********************Content header starts****************/
+#WooShop__dropdown__button {
+  font-size: 14px;
+  min-width: 143px;
+  padding: 5px;
+  color: #606060;
+  border: 1px solid #e6e6e6;
+  background: transparent;
+  text-align: left;
+}
+
+.filter__result {
+  font-size: 14px;
+  color: #606060;
+}
+
+.filter__icons {
+  color: #606060;
+}
+
+.filter__icon {
+  padding: 0 10px;
+}
+
+/**********************Content header ends****************/
+/**********************pagination css starts****************/
+.page-item.active .page-link {
+  z-index: 3;
+  color: #fff;
+  background-color: #a749ff;
+  border-color: #a749ff;
+}
+
+.pagination .active {
+  background: #a749ff !important;
+}
+.pagination li {
+  margin: 0 10px;
+  border-radius: 50% !important;
+}
+.pagination li a,
+.pagination li span {
+  font-size: 16px;
+  line-height: 43px;
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  padding: 0;
+  text-align: center;
+  color: #a749ff;
+  border: none;
+  border-radius: 100% !important;
+  background: none;
+  box-shadow: 0 0 12px 0.8px rgba(0, 0, 0, 0.1);
+}
+.pagination li a:hover,
+.pagination li span:hover {
+  background: #a749ff;
+  color: #fff;
+}
+
+/**********************pagination css ends****************/
+/*Shope page conent ends*/
 
 /*# sourceMappingURL=style.css.map */
