--- a/scss/main.scss
+++ b/scss/main.scss
@@ -831,3 +831,6 @@ footer {
 }
 /**********************pagination css ends****************/
 /*Shope page conent ends*/
+
+/*Imporing single product scss*/
+@import "single-product";
