--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,6 +77,14 @@ $carousel-control-color: invert(100%);
   background: #a749ff;
 }
 
+.yellow {
+  color: #ffa900;
+}
+
+.gray {
+  color: #5f5d5d;
+}
+
 .position__ralative {
   position: relative;
 }
