--- a/css/style.css
+++ b/css/style.css
@@ -10811,6 +10811,14 @@ textarea.form-control-lg {
   background: #a749ff;
 }
 
+.yellow {
+  color: #ffa900;
+}
+
+.gray {
+  color: #5f5d5d;
+}
+
 .position__ralative {
   position: relative;
 }
@@ -11551,6 +11559,126 @@ footer {
   top: 0;
   left: 0;
   height: 60px;
+}
+.WooProduct__info__action--cart {
+  overflow: hidden;
+}
+.WooProduct__info__action--cart button {
+  font-weight: 700;
+  line-height: 1;
+  z-index: 99;
+  display: inline-block;
+  padding: 23px 38px;
+  text-transform: uppercase;
+  color: #fff;
+  border: none;
+  background-color: #343538;
+  position: relative;
+}
+.WooProduct__info__action--cart button::before {
+  position: absolute;
+  content: "";
+  left: -100%;
+  top: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  background: #a749ff;
+}
+.WooProduct__info__action--cart button::after {
+  position: absolute;
+  content: "";
+  right: 0;
+  top: 0;
+  z-index: -1;
+  height: 100%;
+  width: 0;
+  background: #a749ff;
+  transition: all 0.7s ease-in-out;
+}
+.WooProduct__info__action--cart:hover button::before {
+  left: 0;
+  transition: all 0.3s ease-in-out;
+}
+.WooProduct__info__action--cart:hover button::after {
+  width: 100%;
+  transition-delay: 0.3s;
+}
+.WooProduct__info__action--wishlist button, .WooProduct__info__action--compare button {
+  background: none repeat scroll 0 0;
+  border: none;
+}
+.WooProduct__info__category, .WooProduct__info__tags {
+  font-size: 15px;
+  margin-right: 5px;
+  color: #676767;
+  margin: 0 0 10px;
+}
+.WooProduct__info__socials span:hover {
+  color: #a749ff;
+}
+
+.WooProductTab ul .active {
+  color: #000 !important;
+  border-bottom: 2px solid #000;
+  border-radius: 0;
+}
+.WooProductTab ul li button {
+  font-size: 1.5rem !important;
+  color: gray;
+  font-weight: 500 !important;
+}
+.WooProductTab ul li button:hover {
+  color: #000 !important;
+}
+.WooProductTab__spac__name {
+  font-weight: 500;
+  color: #000;
+  display: inline-block;
+  min-width: 8rem;
+}
+.WooProductTab__spac__value {
+  color: gray;
+}
+
+.WooProcuctReview__name {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1;
+  margin: 0;
+}
+.WooProcuctReview__rating {
+  font-size: 0.7rem;
+  margin-left: 10px;
+}
+.WooProcuctReview__description {
+  font-family: Poppins, sans-serif;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 1.5rem;
+  margin: 1rem 0;
+  color: #333;
+}
+
+.Woo__review-form {
+  margin-right: 0;
+}
+.Woo__review-form input,
+.Woo__review-form textarea {
+  border-radius: 0;
+}
+.Woo__review-form input::placeholder,
+.Woo__review-form textarea::placeholder {
+  font-size: 0.8rem;
+}
+.Woo__review-form input[type=submit] {
+  background-color: #a749ff;
+  border: none;
+  color: white;
+  padding: 0.7em 2em;
+}
+.Woo__review-form input[type=submit]:hover {
+  background-color: #333333;
 }
 
 /*# sourceMappingURL=style.css.map */
