--- a/scss/main.scss
+++ b/scss/main.scss
@@ -842,3 +842,9 @@ footer {
 
 /*Imporing single product scss*/
 @import "single-product";
+
+/*Imputing check out scss */
+@import "check-out";
+/*Imputing check out scss */
+/*Imputing check out scss */
+/*Imputing check out scss */
