--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,850 +1,25 @@
 /*Customization of Bootstrap*/
-// for removing horizontal scroll bar
-body {
-  overflow-x: hidden;
-}
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&display=swap");
 
-$font-family-sans-serif: "Poppins", sans-serif;
-
-$carousel-control-color: invert(100%);
-
-// $theme-colors: (
-//   "primary": ,
-// );
-
+@import "variable";
 /* Importing Bootstrap from node_modules*/
 @import "../node_modules/bootstrap/scss/bootstrap";
 
 /* All custom css */
-/* Navitation css */
-
-.home {
-  background-color: #f6f6f6;
-}
-
-.wooTop__nav__items {
-  color: #555252;
-
-  &:hover {
-    color: #a749ff;
-  }
-}
-
-.wooTop__nav__item--bordered::after {
-  position: absolute;
-  top: 47%;
-  right: 0;
-  width: 1px;
-  height: 15px;
-  content: "";
-  transform: translateY(-50%);
-  background-color: #d5d4d4;
-}
-
-.wooTop__nav__submenu {
-  display: none;
-}
-
-.wooTop__nav__dropdown {
-  position: relative;
-}
-
-.wooTop__nav__dropdown:hover .wooTop__nav__submenu {
-  display: block;
-  position: absolute;
-  z-index: 220;
-  top: 30px;
-  left: 20px;
-  width: 125px;
-  padding: 8px 12px 10px;
-  transition: all 0.5s ease 0s;
-  transform-origin: center top 0;
-  text-align: left;
-  opacity: 13;
-  background: #fff none repeat scroll 0 0;
-  box-shadow: 0 1px 7px -2px rgb(0 0 0 / 30%);
-}
-
-/****************** Mega menu css ********************/
-.Wootext-primary {
-  color: #a749ff;
-}
-.Woo-primary-bg {
-  background: #a749ff;
-}
-
-.yellow {
-  color: #ffa900;
-}
-
-.gray {
-  color: #5f5d5d;
-}
-
-.position__ralative {
-  position: relative;
-}
-
-.wooTop__nav__submenu--shop {
-  display: none;
-}
-
-.wooTop__nav__dropdown:hover .wooTop__nav__submenu--shop {
-  display: flex;
-  position: absolute;
-  z-index: 220;
-  top: 30px;
-  left: 20px;
-  width: 700px;
-  padding: 40px;
-  background: #fff none repeat scroll 0 0;
-  box-shadow: 0 1px 7px -2px rgb(0 0 0 / 30%);
-}
-
-.wooTop__nav__submenu--shop h3 {
-  font-size: 14px;
-  font-weight: 500;
-  margin: 0 0 20px;
-  text-transform: uppercase;
-  color: #242424;
-}
-
-.wooTop__nav__submenu--shop li {
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 32px;
-  display: block;
-  padding-top: 0;
-  text-align: left;
-  text-transform: capitalize;
-  color: #333;
-  position: relative;
-  transition: all 3s ease-in-out 0s;
-
-  &:hover {
-    color: #a749ff;
-    transition: all 3s ease-in-out 0s;
-    margin-right: 12px;
-
-    &::before {
-      display: inline-block;
-      margin-right: 10px;
-      z-index: 999;
-      width: 7px;
-      height: 7px;
-      content: "";
-      transition: all 3s ease-in-out 0s;
-      opacity: 1;
-      border-radius: 50%;
-      background: #a749ff;
-    }
-  }
-}
-/****************** Mega menu css ********************/
-/* Navitation css ends*/
-
-/*Main Carousel css starts*/
-.carousel-control-prev {
-  left: -120px;
-}
-
-.carousel-control-next {
-  right: -120px;
-}
-
-#WooMain__carousel {
-  // height: 70vh;
-  // background: palegreen;
-}
-
-.WooMain__carousel__content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  min-width: inherit;
-  min-height: 100%;
-  //   background: palevioletred;
-  &__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    &__subtitle {
-      font-size: 24px;
-      font-weight: 500;
-      margin: 0;
-      letter-spacing: 1px;
-    }
-
-    &__header {
-      font-size: 52px;
-      line-height: 65px;
-      margin: 5px 0 27px;
-    }
-
-    &__button {
-      font-size: 16px;
-      line-height: 1;
-      display: inline-block;
-      padding: 19px 50px;
-      text-transform: uppercase;
-      color: #010101;
-      border: 1px solid #333;
-      background: transparent;
-
-      &:hover {
-        background-color: #a749ff;
-        color: white;
-        border: 1px solid #a749ff;
-      }
-    }
-  }
-}
-/*Main Carousel css ends*/
-
-/*Featured-banner-card css starts*/
-.WooFeatCard__pad {
-  padding: 15px;
-}
-
-.WooFeatCard__single {
-  margin-top: 20px;
-  margin-bottom: 50px;
-  border: 3px solid #ffffff;
-  position: relative;
-  overflow: hidden;
-
-  &:hover &__content__icon {
-    color: #617d0590;
-    border: 2px solid #617d0550;
-    /*icon hover*/
-  }
-
-  img {
-    transition: all 0.5s ease;
-  }
-
-  &:hover img {
-    transform: scale(1.2);
-  }
-
-  &__content {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-
-    &__title {
-      color: #617d05;
-      font-family: Cormorant Garamond;
-      font-size: 36px;
-      font-weight: 600;
-      margin: 0;
-    }
-
-    &__price {
-      font-family: Cormorant Garamond;
-      font-size: 18px;
-      font-weight: 600;
-      margin: 3px 0 58px;
-      color: #010101;
-
-      span {
-        color: #617d05;
-      }
-    }
-
-    &__icon {
-      color: #617d05;
-      border: 2px solid #617d05;
-      display: inline-block;
-      width: 28px;
-      height: 28px;
-      border-radius: 100%;
-      text-align: center;
-    }
-  }
-}
-/*Featured-banner-card css ends*/
-
-/* Daily Deals css starts */
-.WooDailyDeals__heading__title {
-  font-size: 30px;
-  font-weight: 600;
-  position: relative;
-  display: inline-block;
-  margin: 0;
-  position: relative;
-
-  &::before,
-  &::after {
-    position: absolute;
-    top: 17px;
-    width: 80px;
-    height: 2px;
-    content: "";
-    background-color: #000;
-  }
-
-  &::before {
-    left: -100px;
-  }
-
-  &::after {
-    right: -100px;
-  }
-}
-
-.WooDailyDeals__tablist {
-  &__tab a {
-    font-size: 18px;
-    font-weight: 500;
-    margin: 0;
-    transition: all 0.3s ease 0s;
-    color: #555;
-  }
-}
-
-/************ PRODUCTS ***********/
-.WooDailyDeals__product__single {
-  margin: 30px 0;
-  overflow: hidden;
-  position: relative;
-
-  &__img {
-    img {
-      width: 100%;
-      overflow: hidden;
-
-      &:nth-child(1) {
-        // opacity: 1;
-      }
-
-      &:nth-child(2) {
-        position: absolute;
-        right: -100px;
-        opacity: 0;
-        z-index: 7;
-        transition: all 0.7s ease;
-      }
-    }
-  } //img
-
-  &:hover img:nth-child(2) {
-    opacity: 1;
-    right: 0;
-  }
-
-  &__badges {
-    position: absolute;
-    top: 12px;
-    right: 12px;
-    z-index: 9;
-
-    & span {
-      display: block;
-      margin-bottom: 10px;
-      padding: 3px 11px;
-      font-size: 13px;
-      font-weight: 500;
-      line-height: 1;
-      color: #fff;
-      border-radius: 3px;
-
-      &:nth-child(1) {
-        background: #fa6bff;
-      }
-
-      &:nth-child(2) {
-        background: #a749ff;
-      }
-    }
-  } //badges
-
-  &__action {
-    width: 100%;
-    position: absolute;
-    bottom: 96px;
-    display: flex;
-    overflow: hidden;
-    z-index: 9;
-
-    button {
-      font-size: 16px;
-      line-height: 48px;
-      text-align: center;
-      text-transform: capitalize;
-      color: #fff;
-      background: #a749ff;
-
-      &:hover {
-        background: #000;
-      }
-    }
-
-    &__wishlist {
-      width: 48px;
-      height: 48px;
-      border: none;
-
-      //for hover
-      transform: translateY(30px);
-      transition: all 0.7s ease;
-      opacity: 0;
-    }
-
-    &__cart {
-      width: calc(100% - 2 * 48px);
-      height: 48px;
-      border-right: 1px solid #fff;
-      border-left: 1px solid #fff;
-      border-top: none;
-      border-bottom: none;
-
-      //for hover
-      transform: translateY(20px);
-      transition: all 0.7s ease;
-      opacity: 0;
-    }
-
-    &__quickview {
-      width: 48px;
-      height: 48px;
-      border: none;
-
-      //for hover
-      transform: translateY(10px);
-      transition: all 0.7s ease;
-      opacity: 0;
-    }
-  } //action
-
-  &:hover &__action__cart,
-  &:hover &__action__quickview,
-  &:hover &__action__wishlist {
-    transform: translateY(0);
-    transition: all 0.7s ease;
-    opacity: 1;
-  }
-
-  &__info {
-    margin-top: 20px;
-
-    &__title {
-      font-size: 16px;
-      margin: 0;
-
-      a {
-        text-decoration: none;
-        color: #000;
-
-        &:hover {
-          color: #a749ff;
-        }
-      }
-    } //title
-
-    &__rating {
-      margin: 3px 0;
-
-      & .yellow {
-        color: #ffa900;
-      }
-
-      & .gray {
-        color: #5f5d5d;
-      }
-    } //rating
-
-    &__price {
-      font-size: 15px;
-      font-weight: 500;
-
-      &__sale {
-        position: relative;
-        color: #000;
-        margin: 0 9px;
-
-        &::after {
-          position: absolute;
-          top: 10px;
-          right: -13px;
-          width: 7px;
-          height: 2px;
-          content: "";
-          background-color: #000;
-        }
-      }
-
-      &__regular {
-        text-decoration: line-through;
-        color: #8e8e8e;
-        margin: 0 9px;
-      }
-    } //price-
-  } //info
-}
-/************ PRODUCTS ***********/
-/* Daily Deals css ends */
-
-/*Support section css starts*/
-.WooSupport {
-  margin: 100px 0;
-
-  &__single {
-    padding: 36px 5px 30px;
-    border: 4px solid #fff;
-
-    &__icon {
-    }
-
-    &:hover &__icon {
-      animation-duration: 0.4s;
-      animation-name: support__animation;
-    }
-
-    &__title {
-      font-size: 18px;
-      line-height: 24px;
-      margin: 15px 0;
-      color: #494949;
-    }
-
-    &__description {
-      font-size: 14px;
-      width: 80%;
-      margin: 0 auto;
-      color: #6a6a6a;
-    }
-  }
-}
-
-@keyframes support__animation {
-  0% {
-    transform: scale(1.2);
-  }
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: scale(1.2) rotate(3deg);
-  }
-  20%,
-  40%,
-  60%,
-  80% {
-    transform: scale(1.2) rotate(-3deg);
-  }
-  100% {
-    transform: scale(1) rotate(0);
-  }
-}
-/*Support section css ends*/
-
-/*Subscribe section css starts*/
-.WooSubscribe {
-  margin-bottom: 100px;
-
-  &__title {
-    font-size: 48px;
-    margin: 0 0 23px;
-    color: #010101;
-  }
-
-  &__description {
-    font-size: 16px;
-    margin: 0 0 23px;
-    color: #696969;
-  }
-}
-/************Form section***********/
-.WooSubscribe__form {
-  position: relative;
-  width: 100%;
-  margin-top: 50px;
-
-  &__input {
-    background: none;
-    border: none;
-    border-bottom: 2px solid #e2e2e2;
-    width: 100%;
-    height: 45px;
-    padding: 2px 50px 2px 0;
-    color: #333;
-
-    &::placeholder {
-      line-height: 45px;
-      font-size: 14px;
-      padding-bottom: 500px;
-    }
-
-    &:focus {
-      border: 0;
-    }
-  }
-
-  &__submit {
-    position: absolute;
-    top: 0px;
-    right: 0;
-    font-size: 30px;
-    height: 45px;
-    padding: 0;
-    transition: 0.3s;
-    color: #cacaca;
-    border: none;
-    background: none;
-  }
-}
-/************Form section***********/
-
-/*Subscribe section css ends*/
-
-/*footer starts*/
-footer {
-  padding: 80px 0;
-  background-color: #f1f1f1;
-}
-
-.footer__logo {
-  img {
-    margin-top: 41px;
-    margin-bottom: 12px;
-  }
-}
-
-.footer__widget {
-  &__title {
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1;
-    margin: 0 0 16px;
-    color: #313131;
-    text-transform: uppercase;
-  }
-
-  ul {
-    list-style: none;
-
-    li {
-      margin: 0 0 11px;
-      font-size: 14px;
-      color: #5d5d5d;
-
-      &:hover {
-        color: #a749ff;
-      }
-    }
-  }
-}
-.copyright {
-  font-size: 14px;
-  color: #313131;
-  letter-spacing: 0.9px;
-}
-/*footer ends*/
-
-/*Archive shop navigation starts*/
-.WooTopNav__notice {
-  margin: 0;
-  letter-spacing: 0.8px;
-  color: #555252;
-
-  p {
-    font-family: Poppins, sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
-    margin: 0;
-    padding: 0;
-  }
-}
-/*Archive shop navigation ends*/
-
-/* page header breadcrumb css starts*/
-.WooPageHeader {
-  background: #f7f7f7;
-}
-/* page header breadcrumb css ends*/
-
-/* shop sidebar css starts */
-.WooShopSidebar {
-  &__widgets {
-    &__title {
-      font-size: 16px;
-      font-weight: 500;
-      margin: 0;
-      color: #333;
-    }
-
-    &__content {
-      margin: 30px 0;
-
-      form {
-        position: relative;
-        width: 80%;
-
-        .search-input {
-          width: 100%;
-          font-size: 14px;
-          height: 43px;
-          padding: 2px 55px 2px 18px;
-          color: #000;
-          border: 1px solid #e6e6e6;
-          background: transparent;
-        }
-
-        button {
-          font-size: 20px;
-          position: absolute;
-          top: 50%;
-          right: 0%;
-          padding: 0 15px;
-          cursor: pointer;
-          transform: translateY(-50%);
-          color: #000;
-          border: #a1a5aa;
-          border-left: 1px solid #a1a5aa;
-          background: transparent;
-        }
-      }
-
-      &__categories {
-        button {
-          background: none;
-          border: none;
-          position: relative;
-          padding-left: 30px;
-          width: 100%;
-          text-align: left;
-          margin-bottom: 10px;
-
-          .category__checkbox {
-            position: absolute;
-            top: 50%;
-            left: 0;
-            transform: translateY(-50%);
-            border: 2px solid #888;
-            border-radius: 3px;
-            display: inline-block;
-            width: 15px;
-            height: 15px;
-            background: white;
-
-            &::after {
-              position: absolute;
-              content: "";
-              top: 0;
-              left: 3px;
-              width: 5px;
-              height: 8px;
-              transform: rotate(45deg);
-              border: solid rgb(255, 255, 255);
-            }
-          }
-
-          &:hover .category__checkbox {
-            background-color: #a749ff;
-            border: 2px solid #a749ff;
-          }
-        } //button
-
-        ul {
-          padding-left: 0;
-          width: 80%;
-
-          .btn__tag {
-            font-size: 14px;
-            background-color: #f1f1f1;
-            border-radius: 50px;
-            margin-bottom: 15px;
-            margin-right: 10px;
-
-            &:hover {
-              color: white;
-              background-color: #a749ff;
-            }
-          }
-        }
-      } //category
-    } //content ends
-  } //widgets end
-}
-/* shop sidebar css ends */
-
-/*Shope page conent starts*/
-/**********************Content header starts****************/
-#WooShop__dropdown__button {
-  font-size: 14px;
-  min-width: 143px;
-  padding: 5px;
-  color: #606060;
-  border: 1px solid #e6e6e6;
-  background: transparent;
-  text-align: left;
-}
-.filter__result {
-  font-size: 14px;
-  color: #606060;
-}
-.filter__icons {
-  color: #606060;
-}
-.filter__icon {
-  padding: 0 10px;
-}
-/**********************Content header ends****************/
-
-/**********************pagination css starts****************/
-.page-item.active .page-link {
-  z-index: 3;
-  color: #fff;
-  background-color: #a749ff;
-  border-color: #a749ff;
-}
-.pagination {
-  .active {
-    background: #a749ff !important;
-  }
-
-  li {
-    margin: 0 10px;
-    border-radius: 50% !important;
-
-    a,
-    span {
-      font-size: 16px;
-      line-height: 43px;
-      display: inline-block;
-      width: 43px;
-      height: 43px;
-      padding: 0;
-      text-align: center;
-      color: #a749ff;
-      border: none;
-      border-radius: 100% !important;
-      background: none;
-      box-shadow: 0 0 12px 0.8px rgb(0 0 0 / 10%);
-
-      &:hover {
-        background: #a749ff;
-        color: #fff;
-      }
-    }
-  }
-}
-/**********************pagination css ends****************/
-/*Shope page conent ends*/
-
-/*Imporing single product scss*/
+@import "global";
+@import "nav";
+@import "megamenu";
+@import "carousel";
+@import "home-banner-card";
+@import "home-daily-deals";
+@import "products";
+@import "home-support-section";
+@import "home-subscribe-section";
+@import "shop-sidebar";
+@import "shop-filter";
+@import "pagination";
 @import "single-product";
-
-/*Imputing check out scss */
 @import "check-out";
-/*Imputing check out scss */
-/*Imputing check out scss */
-/*Imputing check out scss */
+@import "footer";
